src/App.css
* {
    margin: 0;
    box-sizing: border-box;
}

h3 {
  font-family: 'Quicksand', sans-serif;
  font-weight: 600;
  text-align: left;
  margin: .5em;
}

.card-author {
align-self: flex-start;
text-align: right;
margin-right: 1em;
}



.ac-topic-author {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.topic-button {
    font-family: 'Inconsolata', monospace;
    margin-left: 1em;
    line-height: 7px;
    text-align: center;
    min-width: 100px;
    height: 20px;
    color: #fff;
    padding: 5px 10px;
    font-weight: bold;
    cursor: pointer;
    transition: all 0.3s ease;
    position: relative;
    display: inline-block;
    outline: none;
    border-radius: 20px;
    border: 2px solid #d90429;
    background: #d90429;
  }
  .topic-button:hover {
    background: #fff;
    color: #d90429
  }



.heading-container {
    display: flex;
    border: 4px solid red;
    width: 100%;
    align-items: center;
    justify-content: space-between;
}

h1 {
  color: black;
}

a {
  color: rgb(255, 254, 254);
}

#root {
  background-color: rgb(135, 135, 135);
}


.content-card a {
  color: black;
  
}

.vote-box {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.add-comment-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  border: 4px solid red;
  margin: 10px;
}
.add-comment-container form {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  text-align: center;
}

form input {
  text-align: center;
}


.mobile-menu-icon {
    background-color: red;
    padding: 5px;
    margin-right: 10px;
}

.nav-bar {
    display: flex;
    justify-content: space-between;
    background-color: red;
    width: 100%;
}

.nav-bar ul {
    display: flex;
    flex-direction: row;
    list-style: none;
    padding: 5px;
}


.nav-bar li {
    margin-right: 10px;
    text-decoration: underline;
}

.card-image {
   border-radius: 20px 20px 0px 0px;
   max-width: 875px;
}

.article-cards {
  display: flex;
  justify-content: center;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: stretch;
}

.image-container {
  position: relative;
}

.ac-date {
  text-align: right;
  margin-right: 1.3em;
  font-size: 10px;
  color: gray;
}

.css-button-arrow--red {
  min-width: 130px;
  height: 30px;
  color: #fff;
  padding: 5px 10px;
  font-weight: bold;
  cursor: pointer;
  transition: all 0.3s ease;
  position: relative;
  display: inline-block;
  outline: none;
  overflow: hidden;
  border-radius: 5px;
  border: none;
  background-color: #d90429;
  margin-bottom: 1em;
  margin-top: 1em;
}
.css-button-arrow--red:hover {
  border-radius: 5px;
  padding-right: 24px;
  padding-left:8px;
}
.css-button-arrow--red:hover:after {
  opacity: 1;
  right: 10px;
}
.css-button-arrow--red:after {
  content: "\00BB";
  position: absolute;
  opacity: 0;
  font-size: 20px;
  line-height: 30px;
  top: 0;
  right: -20px;
  transition: 0.4s;
}

.votes-overlay {
  display: flex;
  flex-direction: row;
}

.card-image {
  width: 100%;
  border-radius: 20px 20px 0px 0px;
}

.votes-overlay {
  position: absolute;
  top: 10px; /* Adjust the top position as needed */
  left: 10px; /* Adjust the left position as needed */
  background-color: rgba(0, 0, 0, 0.7); /* Add background color */
  color: white;
  padding: 5px 10px;
  border-radius: 5px;
  font-weight: bold;
  font-size: 14px;
  z-index: 1; /* Ensure the votes overlay is above the image */
}




.content-card {
  margin: 20px;
  display: flex;

  width: 300px;
  max-width: 875px;
    background-color: whitesmoke;
    border-radius: 20px;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    box-shadow: 0 .1rem 1rem rgba(0, 0, 0, 0.1);
}

.content-card img {
  width: 100%;
}

.loader {
    border: 16px solid #f3f3f3; /* Light grey */
    border-top: 16px solid #fc1d1d; /* Blue */
    border-radius: 50%;
    width: 120px;
    height: 120px;
    animation: spin 2s linear infinite;
    text-align: center;
  }
  
  @keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
  }


  .article-box {
    display: flex;
    flex-direction: column;
    width: 100%;
    justify-content: center;
    align-items: center;
  }

  .article-image-box img {
    width: 90%;
  }

  .article-author-date-box {
    display: flex;
    justify-content: space-evenly;
  }

  .votes-single-article {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 1em
}

  .comment-card {
    border: 4px solid red;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: column;
    margin: 10px;
  }

